add menu section

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
 .header-nav__item:first-child {
     margin-left: 0;
 }
-.header-nav__item .fa-chevron-down {
+.header-nav__item i {
     font-size: 12px;
     font-weight: 400;
     margin-left: 8px;
@@ -86,7 +86,7 @@
     border: 2px solid #444444;
     
 }
-.header-basket .fa-shopping-bag {
+.header-basket i {
     color: #e24545;
     margin-right: 8px;
     font-size: 16px;
@@ -114,4 +114,44 @@
     align-items: center;
     justify-content: center;
     
+}
+
+.main {
+    background: #eeeeee url(../images/menu_bg.png) center no-repeat;
+    background-size: cover;
+    min-height: 150px;
+    display: flex;
+    align-items: center;
+}
+.main-title {
+    color: #222222;
+    font-size: 26px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 0;
+}
+.main-breadcrumbs {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+}
+.main-breadcrumbs__item {
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #222222;
+    margin-left: 8px;
+}
+.main-breadcrumbs__item:first-child {
+    margin-left: 0;
+}
+.main-breadcrumbs__item i {
+    margin-left: 8px;
+}
+.main-breadcrumbs__item:last-child {    
+    color: #888888;
+}
+.main-breadcrumbs__item:last-child i {    
+    display: none;
 }
