--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,8 @@
     margin-left: 0;
 }
 .header-nav__item i {
-    font-size: 12px;
-    font-weight: 400;
+    font-size: 14px;
+    font-weight: 900;
     margin-left: 8px;
 }
 .header-nav__item.active {
@@ -179,6 +179,9 @@
     text-transform: uppercase;
     letter-spacing: 0.12px;    
 }
+.main-filter__clear[disabled] {
+    opacity: 0.5;   
+}
 .main-filter__input {
     height: 100%;
     flex-grow: 1;
@@ -224,7 +227,7 @@
     transition: 0.3s;
     bottom: 0;
     right: 50%;
-    transform: translateX(-50%);
+    transform: translateX(50%);
     opacity: 1;
 }
 .card-overlay {
