--- a/css/style.css
+++ b/css/style.css
@@ -59,14 +59,17 @@
     text-transform: uppercase;
     letter-spacing: 9.36px;
 }
-.header__nav {
+.header-nav {
     height: 100%;
     display: flex;
-    justify-content: flex-end;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     align-items: center;
+    margin-top: 20px;
 }
 .header-nav__item {
-    margin-left: 20px;
+    margin-right: 15px;
+    margin-bottom: 10px;
     color: #444444;
     font-size: 13px;
     font-weight: 700;
@@ -179,8 +182,8 @@
 }
 
 .main {
-    padding-top: 50px;
-    padding-bottom: 110px;
+    padding-top: 25px;
+    padding-bottom: 55px;
     border-bottom: 1px solid #eeeeee;
 }
 .main-filter {
@@ -213,7 +216,7 @@
     margin-bottom: 30px;
 }
 .main-content__item {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 .card {
     border: 1px solid #eeeeee;
@@ -336,8 +339,8 @@
 
 .advantages {
     border-bottom: 3px solid #dddddd;
-    padding-top: 95px;
-    padding-bottom: 100px;
+    padding-top: 30px;
+    padding-bottom: 40px;
 }
 .advantages-wrapper {
     border: 2px solid #444444;
@@ -346,7 +349,7 @@
     min-height: 120px;
 }
 .advantages-wrapper__slider {
-    max-width: calc(100% - 40px);
+    max-width: calc(100% - 20px);
     margin-top: -2px;
     background: #FFFFFF;
 }
@@ -358,10 +361,10 @@
 }
 .advantages-wrapper__slider .slider-item i {
     color: #444444;
-    font-size: 32px;
+    font-size: 24px;
 }
 .slider-item-text {
-    margin-left: 19px;
+    margin-left: 8px;
     position: relative;
     margin-bottom: auto;
 }
@@ -419,6 +422,7 @@
     border: 1px solid #cccccc;
     background-color: transparent;
     padding: 0 20px;
+    margin-bottom: 20px;
 }
 .feedback__email::placeholder {
     color: #888888;
@@ -429,8 +433,7 @@
 .feedback__email + i {
     position: absolute;
     right: 35px;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 17px;
     color: #999999;
     font-size: 16px;
 }
@@ -466,14 +469,16 @@
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 .footer-information__copyright strong {
     color: #222222;
-    padding: 0 5px;
+    padding: 0 3px;
 }
 .payment {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 .payment-card {
     margin-left: 10px;
@@ -487,12 +492,57 @@
 .payment-card:first-child {
     margin-left: 0;
 }
-
+@media (min-width: 768px) {
+    .header-nav {
+        justify-content: flex-end;
+    }
+    .header-nav__item {
+        margin-right: 0;
+        margin-left: 20px;
+        margin-bottom: 0;
+    }
+    .footer-information__copyright {
+        margin-bottom: 0;
+        justify-content: flex-start;
+    }
+    .payment {
+        justify-content: flex-end;
+    }
+}
 @media (min-width: 992px) {
+    .main {
+        padding-top: 50px;
+        padding-bottom: 110px;
+    }
+    .main-content__item {
+        margin-bottom: 50px;
+    }
+    .advantages {
+        padding-top: 95px;
+        padding-bottom: 100px;
+    }
+    .header__nav {
+        margin-top: 0;
+    }
+
+    .advantages-wrapper__slider {
+        max-width: calc(100% - 40px)
+    }
+
+
+    .feedback__email {
+        margin-bottom: 0;
+    }
+
+}
+@media (min-width: 1200px) {
+
+    
     .advantages-wrapper__slider .slider-item i {
-        font-size: 24px;
+        font-size: 32px;
     }
     .slider-item-text {
-        margin-left: 8px;
+        margin-left: 19px;
     }
+
 }
